# rest_docker

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
rest_app/: models.py  serializers.py  urls.py  views.py
rest_app/migrations/: 0001_initial.py
rest_docker_project/: asgi.py  settings.py  urls.py  wsgi.py
